# genAI-for-document-generation

./: .pre-commit-config.yaml  .prow.yaml  OWNERS  README.md
.tekton/: on-pullrequest.yaml
ui/: chat.py  pyproject.toml
